# kb-layout

./: .gitignore  Cargo.toml  README.md
archive/: char_least_bigrams.py  first_trigram_count.csv  fix_bigram_count.py  least_possible_bigram_char.py  quadgram_fix.py  quadgrams.py  tri_bigrams.csv
data/: best_placement.csv  bigram_count.csv  char_alpha_count.csv  char_other_count.csv  data-pretty.json  data.json  least_frequent_alpha.csv  quadgrams.csv  repos.txt  tri_bigram_freqs.csv
data/n-bigram/: n2_bigram_score.csv  n2_bigram_score_filtered.csv  n3_bigram_score.csv  n3_bigram_score_filtered.csv  n4_bigram_score.csv  n4_bigram_score_filtered.csv  n5_bigram_score.csv  n5_bigram_score_filtered.csv  n6_bigram_score_filtered.csv
scripts/: duplicate-names.py  filter_nbg.py  home-row-placement.py  homing_col.py  json_to_csv.py  last_bigrams.py  layout_1_bf.py  layout_2_bf.py  layout_5_bf.py  least_frequent_alpha.py  n-bigram_calc.py  pregen_combos.py  quadgram_dedup.py  remaining_blanks.py  rm-url.py  scrape-repos.py  sfbga.py  test.py  tri_bigrams.py
src/: clone-flatten.rs  data.rs  filter.rs  main.rs
src/handlers/: analyze.rs  layout_5.rs  mod.rs  pregen.rs  scrape.rs
