[package]
name = "kb-layout"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
walkdir = "2.5.0"

[profile.release]
opt-level = 3       # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
